<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motor_control_dialog"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">



        <TextView
            android:id="@+id/textViewControlID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motordialog_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motordialog_step_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/seperator_view3"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editText_Motor_Speed"
            android:layout_marginLeft="16dp"
            app:layout_constraintVertical_bias="0.538"
            app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText_Motor_Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="1-10"
        android:imeOptions="actionUnspecified"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seperator_view3" />


        <View
            android:id="@+id/seperator_view3"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:elevation="1dp"
            android:fadingEdgeLength="1dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewControlID"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#c0c0c0"
        android:elevation="1dp"
        android:fadingEdgeLength="1dp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Motor_Speed"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
            android:id="@+id/imageViewButton_motor_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/motordialog_step_left_image_descstep_left"
            android:src="@mipmap/ic_arrow_left"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        android:layout_marginRight="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@android:drawable/radiobutton_off_background"
            tools:ignore="ContentDescription"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.594"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />


        <ImageView
            android:id="@+id/imageViewButton_motor_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/motordialog_step_right_image_desc"
            android:src="@mipmap/ic_arrow_right"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>