<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.autom.kozaris.microcontrol.MainActivity"
            tools:showIn="@layout/fragment_main">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/cardview_title_id"
                android:textColor="?android:attr/panelColorForeground"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <View
                android:id="@+id/seperator_view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="#c0c0c0"
                android:fadingEdgeLength="1dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <View
                android:id="@+id/seperator_view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:background="#c0c0c0"
                android:fadingEdgeLength="1dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewNameLabel"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/cardview_switch_text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view2"
                app:layout_constraintVertical_bias="0.515"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/txtViewNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:text="@string/cardview_description_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view" />

            <TextView
                android:id="@+id/txtviewNameVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:text="@string/cardview_description_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintLeft_toRightOf="@+id/txtViewNameLabel"
                app:layout_constraintRight_toLeftOf="@+id/floatingActionSetupSignal"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


            <TextView
                android:id="@+id/textViewOutputData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:enabled="false"
                android:text="@string/cardview_indication_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/progressBarData"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view2" />

            <TextView
                android:id="@+id/textViewoutputlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:enabled="false"
                android:text="@string/cardview_indication_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_green_light"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view2" />

            <Button
                android:id="@+id/buttonControlMotor"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@color/login_buttons"
                android:enabled="false"
                android:text="@string/cardview_button_control_text"
                android:textAllCaps="false"
                android:textColor="?android:attr/textColorPrimaryNoDisable"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view2" />

            <ProgressBar
                android:id="@+id/progressBarData"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:enabled="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textViewoutputlabel"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view2"
                app:layout_constraintVertical_bias="0.555" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionSetupSignal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                app:backgroundTint="@android:color/holo_red_light"
                app:elevation="5dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/seperator_view2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view"
                app:srcCompat="@drawable/ic_reset_settings" />

            <EditText
                android:id="@+id/editTextLcdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="message"
                android:inputType="textPersonName"
                android:paddingEnd="8dp"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintLeft_toRightOf="@+id/buttonSendtoLcd"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/seperator_view2"
                app:layout_constraintVertical_bias="0.6" />

            <Button
                android:id="@+id/buttonSendtoLcd"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/toast_frame"
                android:backgroundTint="@color/login_buttons"
                android:elevation="5dp"
                android:text="Send"
                android:textColor="?android:attr/textColorPrimaryNoDisable"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seperator_view2"
                app:layout_constraintVertical_bias="0.578" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>